[project]
name = "ansible-module-tplink-wireless"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ansible>=6.7.0",
    "playwright>=1.48.0",
    "pydantic>=2.10.6",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.9.10",
]

[tool.mypy]
strict = true
